# bariskode-tempmail

./: .gitignore  AGENTS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
db/: schema.sql
docs/: FINAL_DEPLOYMENT_CHECKLIST.md  GO_LIVE_CHECKLIST.md  IMPLEMENTATION_CHECKLIST.md  PRD.md  PRODUCTION_READINESS.md  PROJECT_STATUS.md  README.md  RELEASE_NOTES_MVP.md  SPECS.md  TODO.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: index.ts
frontend/src/router/: index.ts
frontend/src/store/: mail.ts  settings.ts
frontend/src/views/: AdminView.vue  IndexView.vue  UserView.vue
mail-parser-wasm/: Cargo.toml
mail-parser-wasm/src/: lib.rs
smtp_proxy_server/: Dockerfile  README.md  http_client.py  mailbox.py  main.py  message.py  requirements.txt
worker/: package.json  tsconfig.json  vitest.config.ts  wrangler.toml
worker/src/: constants.ts  email_handler.ts  scheduled_handler.ts  worker.ts
worker/src/admin_api/: index.test.ts  index.ts
worker/src/auth/: index.test.ts  index.ts
worker/src/common_api/: index.test.ts  index.ts
worker/src/models/: address.ts  mail.ts  settings.ts  user.ts
worker/src/telegram_api/: index.ts
worker/src/test/: helpers.ts
worker/src/types/: env.ts
worker/src/user_api/: index.test.ts  index.ts
worker/src/utils/: admin_auth.test.ts  admin_auth.ts  crypto.test.ts  crypto.ts  csrf.test.ts  csrf.ts  db.ts  email.test.ts  email.ts  jwt.test.ts  jwt.ts  rate_limit.ts  role_policy.ts  runtime.test.ts  runtime.ts  telegram.ts  turnstile.test.ts  turnstile.ts  user_auth.ts  (+1 more)
